{
  "@@locale": "zh",
  "appTitle": "德扑之光",
  "login": "登录",
  "register": "注册",
  "username": "用户名/手机号",
  "password": "密码",
  "forgotPassword": "忘记密码？",
  "noAccount": "还没有账户？",
  "loginNow": "立即注册",
  "otherLogin": "其他方式登录",
  "lobby": "大厅",
  "social": "社交",
  "ranking": "排行",
  "profile": "我的",
  "cashGame": "现金桌",
  "sng": "SNG",
  "tournament": "锦标赛",
  "training": "训练赛",
  "online": "在线",
  "full": "满员",
  "bb": "BB",
  "players": "人",
  "limit": "上限",
  "messages": "消息",
  "friends": "好友",
  "inbox": "站内消息",
  "chatroom": "聊天室",
  "wealthRank": "财富榜",
  "winRateRank": "胜率榜",
  "streakRank": "连胜榜",
  "gold": "金币",
  "hands": "手数",
  "winRate": "胜率",
  "recharge": "充值",
  "handHistory": "牌局记录",
  "settings": "设置",
  "help": "帮助与反馈",
  "logout": "退出登录",
  "fold": "弃牌",
  "check": "过牌",
  "call": "跟分",
  "raise": "加分",
  "pot": "底池",
  "emptySeat": "空座",
  "dealer": "D",
  "straddle": "Straddle",
  "folded": "弃牌",
  "allIn": "ALL IN",
  "away": "暂离",
  "highCard": "高牌",
  "balance": "余额",
  "club": "俱乐部"
}
